--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -7,18 +7,12 @@
   transition: background-color .2s;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
+.dark-mode body {
+  @apply bg-gray-800;
+  color: #f1eadc;
 }
 
 .dark-mode {
-  body {
-    @apply bg-gray-800;
-    color: #f1eadc;
-  }
-
   body > div {
     background: linear-gradient(15deg, #2A2D43 50%, #414361 50.1%);
   }
@@ -45,4 +39,13 @@ button:focus {
 
 .image-illustration {
   filter: drop-shadow(6px 7px 6px rgba(0, 0, 0, .2));
+}
+
+
+// Page transitions
+.page-enter-active, .page-leave-active {
+  transition: opacity 0.2s;
+}
+.page-enter, .page-leave-to {
+  opacity: 0;
 }
